--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,35 @@
-body {
-    text-align: center;
+* {
+    margin: 0;
+    padding: 0;
+  }
+  
+  html,
+  body {
+  width: 100%;
+  height: 100%;
+  }
+
+#background-container {
+    width: 100%;
+    height: 100%;
+    min-width: 100%;
+    min-height: 100%;
+    position: relative;
 }
+
+#background-container::before {
+    background-image: url(../images/descendingAirplane.jpeg);
+    background-attachment: fixed;
+    background-position: center;
+    background-size: cover;
+    min-height: 100%;
+    content: "";
+    display: block;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -2;
+    opacity: 0.4;
+    }
