--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -33,3 +33,11 @@
     z-index: -2;
     opacity: 0.4;
     }
+
+h1, h2, h4, label {
+    padding: 10px;
+}
+
+button {
+    margin-bottom: 20px;
+}
