--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,13 +1,14 @@
 * {
     margin: 0;
     padding: 0;
-  }
-  
-  html,
-  body {
-  width: 100%;
-  height: 100%;
-  }
+    text-align: center;
+}
+
+html,
+body {
+    width: 100%;
+    height: 100%;
+}
 
 #background-container {
     width: 100%;
@@ -32,10 +33,13 @@
     height: 100%;
     z-index: -2;
     opacity: 0.4;
-    }
+}
 
-h1, h2, h4, label {
-    padding: 10px;
+h1,
+h2,
+h4,
+label {
+    padding: 15px;
 }
 
 button {
