--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,10 @@
+body {
+    font-family: Arial, Helvetica, sans-serif;
+}
+
 * {
     margin: 0;
     padding: 0;
-    font-family: 'Nothing You Could Do', cursive;
     text-align: center;
 }
 
@@ -41,6 +44,7 @@ h2,
 h4,
 label {
     padding: 15px;
+    font-family: 'Nothing You Could Do', cursive;
 }
 
 button {
