--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,7 +13,9 @@ body {
     width: 100%;
     height: 100%;
 }
-
+#searchForm {
+    background: rgba(0, 0, 0, .05);
+}
 #background-container {
     width: 100%;
     height: 100%;
