--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,6 +6,8 @@
 
 body {
     font-family: Arial, Helvetica, sans-serif;
+    background-image: url(../images/airplane.png);
+
 }
 
 html,
@@ -25,7 +27,6 @@ body {
 }
 
 #background-container::before {
-    background-image: url(../images/descendingAirplane.jpeg);
     background-attachment: fixed;
     background-position: center;
     background-size: cover;
