--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -52,8 +52,8 @@ label {
     font-family: 'Nothing You Could Do', cursive;
 }
 
-button {
-    margin-bottom: 40px;
+.jumbotron-fluid, .btn-primary {
+    background-color: rgb(69, 135, 183);
 }
 
 .card, .eventDiv {
